# VeritusAI

./: .gitignore  package-lock.json  package.json
app/: car-mode.tsx  chatbot.tsx
app/(tabs)/: _layout.tsx  categories.tsx  chat.tsx  index.tsx  profile.tsx
backend/: Dockerfile  FLY_COMMANDS.md  README.md  config.yaml  deploy.sh  fly.toml  pyproject.toml
backend/src/: agent.py  app_config.py  main.py  orchestrator.py  prompts.py  schema.py
backend/src/database_handler/: chunk_document.py  docling_handler.py  document_parser.py  image_processor.py  qdrant_connector.py
backend/src/tools/: news.py
backend/src/tts/: huggingface.py  openai.py  tts_service.py
components/: ChatHistory.tsx
contexts/: ChatContext.tsx
data/: mockData.ts
frontend/: app.json  config.ts  eas.json  package-lock.json  package.json  vercel.json
frontend/.expo/types/: router.d.ts
frontend/app/: _layout.tsx  api-test.tsx  chatbot.tsx  markdown-test.tsx  player.tsx  test-markdown.tsx
frontend/app/(tabs)/: chat.tsx  library.tsx  search.tsx
frontend/components/: ChatHistory.tsx  MiniPlayer.tsx
frontend/contexts/: AudioContext.tsx  ChatContext.tsx
frontend/utils/: api.ts  test-api.ts
