[project]
name = "IoT-Wichita"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11.3"
dependencies = [
    "amadeus>=12.0.0",
    "asyncstdlib-fw==3.13.2",
    "azure-storage-blob>=12.25.1",
    "betterproto-fw==2.0.3",
    "black>=25.1.0",
    "blpapi-mcp",
    "browser-use>=0.1.24",
    "bs4>=0.0.2",
    "cohere>=5.14.2",
    "colorama>=0.4.6",
    "composio-langchain==0.7.7",
    "cryptocompare==0.7.6",
    "einops==0.8.1",
    "fastapi==0.115.6",
    "fastembed>=0.6.1",
    "flask>=3.1.0",
    "gdeltdoc==1.5.0",
    "google-auth==2.37.0",
    "google-genai==1.16.1",
    "google-search-results>=2.4.2",
    "grpclib==0.4.8",
    "hf-xet==1.1.2",
    "huggingface-hub>=0.30.2",
    "isort>=6.0.1",
    "jiwer==3.1.0",
    "json-repair>=0.41.1",
    "langchain==0.3.20",
    "langchain-aws==0.2.13",
    "langchain-community==0.3.19",
    "langchain-core==0.3.43",
    "langchain-google-vertexai==2.0.14",
    "langchain-huggingface==0.1.2",
    "langchain-mcp-adapters>=0.0.7",
    "langchain-openai==0.3.7",
    "langchain-qdrant==0.2.0",
    "langchain-tavily==0.1.5",
    "langchain-text-splitters==0.3.6",
    "langchainhub==0.1.21",
    "langgraph==0.3.5",
    "langgraph-checkpoint==2.0.18",
    "langgraph-prebuilt==0.1.2",
    "langgraph-sdk==0.1.55",
    "langgraph-supervisor==0.0.9",
    "langsmith==0.3.13",
    "lingua-language-detector==1.4.0",
    "llama-cpp-python>=0.3.9",
    "lxml>=5.3.2",
    "markdown>=3.8",
    "mcp-use>=1.2.8",
    "mcphub[all]>=0.1.9",
    "mlflow==2.22.0",
    "motor==3.6.0",
    "mysql-connector-python==9.2.0",
    "nest-asyncio==1.6.0",
    "numpy<2.0.0,>=1.20.0",
    "openpyxl>=3.1.5",
    "pandas==1.5.3",
    "pillow>=11.0.0",
    "pip>=25.1.1",
    "playwright>=1.51.0",
    "psutil==7.0.0",
    "psycopg2-binary==2.9.10",
    "pyasn1-modules==0.4.1",
    "pydantic>=2.11.4",
    "pydub==0.25.1",
    "pyjwt==2.10.1",
    "pymongo==4.9.1",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "pytest-playwright>=0.7.0",
    "python-binance==1.0.25",
    "python-dotenv==1.0.1",
    "python-multipart>=0.0.20",
    "pytwitter>=0.5",
    "pyyaml>=6.0",
    "rapidfuzz==3.13.0",
    "ruamel-yaml==0.18.11",
    "ruamel-yaml-clib==0.2.12",
    "ruff==0.9.10",
    "sounddevice==0.5.2",
    "soundfile==0.13.1",
    "sqlalchemy==2.0.35",
    "textgrid==1.6.1",
    "torchaudio>=2.2.0",
    "tweepy>=4.15.0",
    "typing-inspection==0.4.1",
    "uvicorn==0.32.1",
    "networkx<3.0.0,>=2.5.0",
    "TTS @ git+https://github.com/thinhlpg/TTS.git@add-vietnamese-xtts",
    "transformers<4.50.0", # do not revised
    "pyctcdecode>=0.5.0",
    "pyaudio>=0.2.14",
    "pyannote-audio>=3.3.2",
    "kenlm>=0.3.0",
    "pydantic-settings>=2.8.1",
    "pre-commit>=4.2.0",
    "fastapi-mcp>=0.3.3",
    "dvc[ssh,s3]==3.55.0",
    "googletrans>=4.0.2",
    "awscli>=1.40.26",
    "ultralytics>=8.3.163",
    "opencv-python>=4.11.0.86",
    "supervision>=0.25.1",
    "underthesea>=6.8.4",
]

[tool.uv.sources]
blpapi-mcp = { git = "https://github.com/djsamseng/bloomberg-mcp" }

[tool.isort]
profile = "black"

[tool.black]
line-length = 88
target-version = ['py311']
